--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "package:replace-scss": "node ./config/replace-scss.js",
     "package:css": "node-sass -o release/ src/themes && node-sass -o release/components src/components",
     "package:minify": "uglifyjs release/index.js --source-map --compress --mangle --screw-ie8 --output release/index.min.js",
+    "ghpages": "npm-run-all -s clean release deploy",
     "deploy": "node ./config/deploy.js",
     "pree2e:full": "npm run build:release",
     "e2e:full": "npm run e2e",
